# clondar

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  README_JA.md  SPECIFICATION.md  TEST_REPORT.md
.agents/: AGENTS.md  INSTRUCTIONS.md  Instructions.md
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RELEASE.md  SPECIFICATION.md  TEST_REPORT.md  TODO.md  Todo.md  USER_GUIDE.md  project_template_guide.md
docs/en/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  FOOTPRINTS.md  PROJECT_TEMPLATE_GUIDE.md  RELEASE.md  SECURITY.md  SPECIFICATION.md  TESTING.md  TEST_REPORT.md  TODO.md  USER_GUIDE.md
docs/ja/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  FOOTPRINTS.md  PROJECT_TEMPLATE_GUIDE.md  RELEASE.md  SECURITY.md  SPECIFICATION.md  TESTING.md  TEST_REPORT.md  TODO.md  USER_GUIDE.md
scripts/: bump-version.ps1
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  style.css  vite.config.js
ui/config/: holidays.json
ui/src/: App.js  App.jsx  index.css  main.js  main.jsx
ui/src/components/: Calendar.js  Calendar.jsx  Clock.js  Clock.jsx  HolidaysManager.jsx
ui/src/utils/: holidays.js  holidays.test.js  tauri.js
