[package]
name = "Clondar"
version = "1.3.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.96.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
# 2026-07-03: 共有ライブラリの参照追加
common_lib = { path = "../../common_lib" }

[profile.release]
opt-level = 'z'     # サイズ最適化
lto = true          # リンク時最適化
codegen-units = 1   # コンパイル単位を1にして最適化を最大化
panic = 'abort'     # パニック時の巻き戻しを無効化して軽量化
strip = true        # シンボル情報を削除（サイズ大幅削減）
